tests/ui/ferrocene/compiler-arguments/upper_l/upper_l_crate_no-dir.rs
//@ check-fail
//@ compile-flags: -L crate=
//~? ERROR empty search path

fn main() {}

// ferrocene-annotations: um_rustc_L
